--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,51 +1,129 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "wingman"
 version = "0.1.0"
-description = "Your personal AI wingman — powered by Kimi K2.5 + Ollama"
+description = "Personal AI Assistant - OpenClaw-style architecture"
+readme = "README.md"
 requires-python = ">=3.11"
-license = { text = "MIT" }
+license = {text = "MIT"}
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+keywords = ["ai", "assistant", "llm", "agent", "automation"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
 
 dependencies = [
     # Core
-    "fastapi>=0.110.0",
-    "uvicorn[standard]>=0.27.0",
-    "websockets>=12.0",
-    "pydantic>=2.5.0",
-    "typer[all]>=0.9.0",
-    "rich>=13.0.0",
-
+    "pydantic>=2.0",
+    "typer>=0.9.0",
+    "rich>=13.0",
+    
+    # Web/Gateway
+    "fastapi>=0.100.0",
+    "uvicorn>=0.22.0",
+    "websockets>=11.0",
+    "httpx>=0.24.0",
+    
     # LLM Providers
-    "google-genai>=1.0.0",
-    "httpx>=0.27.0",
-    "openai>=1.10.0",
-
-    # Channels
-    "python-telegram-bot>=21.0",
-    "discord.py>=2.3.0",
-
+    "openai>=1.0.0",
+    "google-genai>=0.4.0",
+    
     # Tools
-    "playwright>=1.40.0",
     "duckduckgo-search>=4.0",
-    "ddgs>=0.1.0",  # Added ddgs explicitly as per runtime warning
-
-    # Memory & Logging
-    "aiofiles>=23.0",
-    "python-frontmatter>=1.0.0",
+    
+    # Channels (optional but commonly used)
+    "python-telegram-bot>=20.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
-    "pytest-asyncio>=0.23.0",
+    "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.0",
+    "black>=23.0",
+    "ruff>=0.1.0",
+    "mypy>=1.5.0",
+]
+
+discord = [
+    "discord.py>=2.3.0",
+]
+
+local = [
+    "sentence-transformers>=2.2.0",
+    "torch>=2.0.0",
+]
+
+# LangExtract - Structured extraction with source grounding
+extraction = [
+    "langextract>=1.1.0",
+]
+
+# Browser-Use - AI-powered browser automation
+browser = [
+    "browser-use>=0.4.0",
+    "langchain-openai>=0.1.0",
+    "langchain-anthropic>=0.1.0",
+    "langchain-google-genai>=1.0.0",
+]
+
+all = [
+    "wingman[dev,discord,local,extraction,browser]",
 ]
 
 [project.scripts]
-wingman = "src.cli.app:app"
+wingman = "src.main:app"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src"]
+[project.urls]
+Homepage = "https://github.com/yourusername/wingman"
+Documentation = "https://github.com/yourusername/wingman#readme"
+Repository = "https://github.com/yourusername/wingman"
+Issues = "https://github.com/yourusername/wingman/issues"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["src*"]
+
+[tool.setuptools.package-data]
+"src.memory.templates" = ["*.md"]
+
+[tool.black]
+line-length = 100
+target-version = ['py311']
+
+[tool.ruff]
+line-length = 100
+target-version = "py311"
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # Pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+]
+ignore = [
+    "E501",  # line too long (handled by black)
+]
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+addopts = "-v --tb=short"
