docs(config): Rewrite .env.example for Wingman configuration
Complete rewrite from LangExtract-specific to Wingman-specific:
- Document all 6 LLM providers (Kimi, Gemini, Ollama, OpenAI, OpenRouter, OpenAI Chat)
- Add Kimi/Moonshot K2.5 as default provider configuration
- Include Telegram and Discord bot token placeholders
- Add security settings (workspace isolation, allowed paths)
- Document model selection guide and provider preferences
- Add system settings (session timeout, max sessions, log level)
- Include vector store and memory configuration
- Add comprehensive inline documentation for each setting

Provides clear guidance for new users setting up Wingman.

--- a/.env.example
+++ b/.env.example
@@ -1,114 +1,160 @@
-# LangExtract API Configuration
+# Wingman AI Assistant - Environment Configuration
 # Copy this file to .env and fill in your actual API keys
+# 
+# Quick Start:
+# 1. Get a free Kimi API key at: https://platform.moonshot.cn
+# 2. Copy this file: cp .env.example .env
+# 3. Add your KIMI_API_KEY to .env
+# 4. Run: python -m src.cli.app onboard
 
 # =============================================================================
-# GOOGLE GEMINI / VERTEX AI (Primary Recommended Provider)
+# LLM PROVIDERS (At least one required)
 # =============================================================================
 
-# Option 1: Google AI Studio API Key (for Gemini models)
-# Get your key from: https://aistudio.google.com/app/apikey
-LANGEXTRACT_API_KEY=your-google-ai-studio-api-key-here
+# -----------------------------------------------------------------------------
+# KIMI (Moonshot K2.5) - DEFAULT PROVIDER - FREE TIER AVAILABLE ⭐
+# -----------------------------------------------------------------------------
+# Get your free API key at: https://platform.moonshot.cn
+# This is the default and recommended provider for Wingman
+KIMI_API_KEY=your_kimi_api_key_here
+# KIMI_API_BASE=https://api.moonshot.cn/v1  # Optional: custom endpoint
 
-# Alternative variable name (also accepted)
-GOOGLE_API_KEY=your-google-api-key-here
+# -----------------------------------------------------------------------------
+# GOOGLE GEMINI / VERTEX AI (Primary Alternative - Free Tier Available)
+# -----------------------------------------------------------------------------
 
-# Option 2: Vertex AI (for enterprise/GCP users)
-# Uses service account authentication instead of API key
-# Set language_model_params in code:
-#   language_model_params={
-#       "vertexai": True,
-#       "project": "your-gcp-project-id",
-#       "location": "global"  # or "us-central1", etc.
-#   }
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+# GEMINI_API_BASE=https://generativelanguage.googleapis.com/v1beta  # Optional
 
-# =============================================================================
-# OPENAI (Optional - requires pip install langextract[openai])
-# =============================================================================
+# For LangExtract compatibility:
+GOOGLE_API_KEY=your_google_api_key_here
+LANGEXTRACT_API_KEY=your_google_api_key_here
 
+# -----------------------------------------------------------------------------
+# OPENAI (GPT-4, GPT-4o)
+# -----------------------------------------------------------------------------
 # Get your key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_API_KEY=your_openai_api_key_here
+# OPENAI_API_BASE=https://api.openai.com/v1  # Optional: custom endpoint
 
-# Note: When using OpenAI models, you must set:
-#   fence_output=True
-#   use_schema_constraints=False
-# in your lx.extract() call
+# -----------------------------------------------------------------------------
+# OPENROUTER (Multi-Model Proxy)
+# -----------------------------------------------------------------------------
+# Get your key from: https://openrouter.ai
+# Access Claude, Llama, Mistral, and many other models
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+# OPENROUTER_API_BASE=https://openrouter.ai/api/v1  # Optional
 
-# =============================================================================
-# ANTHROPIC / CLAUDE (Optional - community provider)
-# =============================================================================
-
+# -----------------------------------------------------------------------------
+# ANTHROPIC / CLAUDE (Optional)
+# -----------------------------------------------------------------------------
 # Get your key from: https://console.anthropic.com/settings/keys
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# =============================================================================
+# -----------------------------------------------------------------------------
 # OLLAMA (Local Models - No API Key Required)
-# =============================================================================
-
+# -----------------------------------------------------------------------------
 # No API key needed for local Ollama models
 # Just ensure Ollama is running: ollama serve
 # Default URL: http://localhost:11434
-
-# Optional: Custom Ollama URL if not running on default port
-# OLLAMA_HOST=http://localhost:11434
+OLLAMA_API_BASE=http://localhost:11434
 
 # =============================================================================
-# MODEL SELECTION GUIDE
+# MESSAGING CHANNELS (Optional - For Multi-Channel Access)
 # =============================================================================
 
-# Recommended models by use case:
-#
-# DEFAULT (Best balance):
-#   model_id="gemini-2.5-flash"
-#
-# COMPLEX REASONING:
-#   model_id="gemini-2.5-pro"
-#
-# COST-EFFECTIVE:
-#   model_id="gemini-2.5-flash"
-#
-# OPENAI ALTERNATIVE:
-#   model_id="gpt-4o"
-#   model_id="gpt-4o-mini"
-#
-# LOCAL/PRIVATE:
-#   model_id="gemma2:2b"  # via Ollama
-#   model_id="llama3.1:8b"  # via Ollama
+# -----------------------------------------------------------------------------
+# TELEGRAM
+# -----------------------------------------------------------------------------
+# Create a bot with @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+
+# -----------------------------------------------------------------------------
+# DISCORD
+# -----------------------------------------------------------------------------
+# Create an application at: https://discord.com/developers/applications
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
 
 # =============================================================================
-# EXAMPLE USAGE
+# APPLICATION CONFIGURATION
 # =============================================================================
 
-# import langextract as lx
+# Default LLM Model (format: provider/model-name)
+# Options:
+#   - kimi/kimi-k2.5              (Moonshot K2.5 - default)
+#   - gemini/gemini-2.5-flash     (Fast, cost-effective)
+#   - gemini/gemini-2.5-pro       (Best reasoning)
+#   - ollama/deepseek-r1:14b      (Local reasoning model)
+#   - ollama/llama3:latest        (Local general purpose)
+#   - openai/gpt-4o               (OpenAI latest)
+#   - openai/gpt-4o-mini          (OpenAI cost-effective)
+#   - openrouter/anthropic/claude-opus-4-5  (Claude via OpenRouter)
+DEFAULT_MODEL=kimi/kimi-k2.5
+
+# Workspace Directory (where sessions, memory, and logs are stored)
+WORKSPACE_PATH=~/.wingman/workspace
+
+# Gateway Server Configuration
+GATEWAY_HOST=127.0.0.1
+GATEWAY_PORT=18789
+
+# Logging Level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# Maximum tokens for LLM responses
+MAX_TOKENS=4000
+
+# Temperature for LLM (0.0 - 1.0, higher = more creative)
+TEMPERATURE=0.7
+
+# Maximum tool execution iterations per request
+MAX_TOOL_ITERATIONS=25
+
+# Session timeout in seconds (default: 1 hour)
+SESSION_TIMEOUT=3600
+
+# =============================================================================
+# TOOLS CONFIGURATION (Optional)
+# =============================================================================
+
+# Web Search - DuckDuckGo (No API key needed by default)
+# For enhanced search capabilities:
+# SERPAPI_KEY=your_serpapi_key_here
+# BRAVE_SEARCH_API_KEY=your_brave_search_key_here
+
+# Embeddings Model for Semantic Search (Local, no API key needed)
+# Options: all-MiniLM-L6-v2 (fast), all-mpnet-base-v2 (better quality)
+EMBEDDINGS_MODEL=all-MiniLM-L6-v2
+
+# =============================================================================
+# SECURITY SETTINGS
+# =============================================================================
+
+# Enable/Disable shell command execution (true/false)
+ALLOW_SHELL_COMMANDS=true
+
+# Enable/Disable file system access (true/false)
+ALLOW_FILESYSTEM_ACCESS=true
+
+# Allowed workspace directories (comma-separated absolute paths)
+# ALLOWED_WORKSPACES=/home/user/projects,/home/user/documents
+
+# =============================================================================
+# EXAMPLE USAGE PATTERNS
+# =============================================================================
+
+# CLI Mode:
+#   python -m src.cli.app agent -m \"Research quantum computing\"
 #
-# # Using environment variables (recommended)
-# result = lx.extract(
-#     text_or_documents="Your text here",
-#     prompt_description="Extract entities...",
-#     examples=[...],
-#     model_id="gemini-2.5-flash"
-# )
+# Gateway Mode:
+#   python -m src.cli.app gateway --port 18789
 #
-# # Using OpenAI (requires additional parameters)
-# result = lx.extract(
-#     text_or_documents="Your text here",
-#     prompt_description="Extract entities...",
-#     examples=[...],
-#     model_id="gpt-4o",
-#     api_key=os.environ.get('OPENAI_API_KEY'),
-#     fence_output=True,
-#     use_schema_constraints=False
-# )
+# Configure Channels:
+#   python -m src.cli.app channels login --telegram
 #
-# # Using Ollama (local, no API key)
-# result = lx.extract(
-#     text_or_documents="Your text here",
-#     prompt_description="Extract entities...",
-#     examples=[...],
-#     model_id="gemma2:2b",
-#     model_url="http://localhost:11434",
-#     fence_output=False,
-#     use_schema_constraints=False
-# )
+# System Doctor:
+#   python -m src.cli.app doctor
 
 # =============================================================================
 # SECURITY NOTES
