feat(architecture): Implement OpenClaw/PicoClaw-inspired improvements
Phase 1: Security & Multi-Agent Foundation

WORKSPACE SANDBOXING (PicoClaw-inspired):
- Add WINGMAN_WORKSPACE environment variable for workspace root
- Add workspace_sandboxed flag to enforce security boundaries
- Update filesystem.py to restrict operations to workspace
- Update shell.py to enforce workspace-restricted command execution
- Add workspace root initialization on startup
- Block access to system paths (/System, /Library, /bin, /sbin, etc.)

SECURITY AUDIT SYSTEM:
- Create src/security/audit.py for security event tracking
- Log workspace violations, blocked commands, path traversal attempts
- JSONL-based audit log with async queue-based writes
- Severity levels: INFO, WARNING, CRITICAL
- Global audit instance via get_audit()

ENHANCED COMMAND VALIDATION:
- Expand DANGEROUS_PATTERNS with PicoClaw's comprehensive list
- Add configurable blocked_commands in settings
- Validate commands against user-defined block list
- Enhanced logging for high-risk command execution
- Command validation integrates with security audit

MULTI-AGENT COMMUNICATION (OpenClaw pattern):
- Create src/tools/sessions.py with sessions_* tools
- sessions_create: Spawn child agent sessions for delegation
- sessions_message: Send messages between agents with timeout
- sessions_list: List active sessions with hierarchy
- sessions_close: Clean shutdown of child sessions
- Support for agent specialization (research, coding, writer, etc.)

AUTONOMOUS HEARTBEAT SYSTEM (PicoClaw-inspired):
- Create src/core/heartbeat.py for background task execution
- Configurable intervals: FAST (5s), NORMAL (30s), SLOW (5min), HOURLY, DAILY
- Default tasks: session_cleanup, memory_consolidation, health_check
- Async task execution with error handling and retry
- Task enable/disable and status monitoring
- Graceful shutdown and resource cleanup

CONFIGURATION UPDATES:
- Add workspace_sandboxed flag to AgentDefaults
- Add workspace_restricte

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,20 @@
 # 4. Run: python -m src.cli.app onboard
 
 # =============================================================================
+# WORKSPACE CONFIGURATION (Security & Sandboxing)
+# =============================================================================
+
+# Workspace directory for all agent operations (files, shell commands)
+# Default: ~/.wingman/workspace
+# Set to a dedicated directory to enable secure sandboxing
+WINGMAN_WORKSPACE=~/.wingman/workspace
+
+# Enable workspace sandboxing (highly recommended for security)
+# When enabled, all file and shell operations are restricted to WINGMAN_WORKSPACE
+# Default: true
+WINGMAN_WORKSPACE_SANDBOXED=true
+
+# =============================================================================
 # LLM PROVIDERS (At least one required)
 # =============================================================================
 
