feat(channels): Add WhatsApp and Slack integrations, enhance Discord
Phase 3: Channel Expansion - OpenClaw/PicoClaw improvements

New Channels:
- WhatsApp: Twilio API integration with media support, webhook-based
- Slack: Bolt framework with slash commands, interactive components, Socket Mode

Discord Enhancements:
- Slash commands: /ask, /help
- Rich embeds with author, footer, color coding
- Improved error handling and message splitting

Configuration:
- Added WhatsAppChannel and SlackChannel to settings.py
- Updated .env.example with Twilio and Slack credentials
- Added twilio and slack-bolt dependencies to pyproject.toml

Features:
- WhatsApp: Media URL support, session management by phone number
- Slack: Threaded conversations, @mentions, DMs, button interactions
- Discord: Command tree syncing, embed-based responses

Files changed:
- src/channels/whatsapp.py (new)
- src/channels/slack.py (new)
- src/channels/discord.py (enhanced)
- src/config/settings.py (WhatsApp/Slack config)
- .env.example (new env vars)
- pyproject.toml (new dependencies)

--- a/.env.example
+++ b/.env.example
@@ -90,6 +90,23 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 # Create an application at: https://discord.com/developers/applications
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
 
+# -----------------------------------------------------------------------------
+# WHATSAPP (via Twilio)
+# -----------------------------------------------------------------------------
+# Create a Twilio account at: https://www.twilio.com
+# Set up WhatsApp messaging: https://www.twilio.com/whatsapp
+TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886  # Format: whatsapp:+1234567890
+
+# -----------------------------------------------------------------------------
+# SLACK
+# -----------------------------------------------------------------------------
+# Create a Slack app at: https://api.slack.com/apps
+# Enable Socket Mode and get both tokens
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token-here
+SLACK_APP_TOKEN=xapp-your-slack-app-token-here  # For Socket Mode
+
 # =============================================================================
 # APPLICATION CONFIGURATION
 # =============================================================================
