--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,14 @@ discord = [
     "discord.py>=2.3.0",
 ]
 
+whatsapp = [
+    "twilio>=8.0.0",
+]
+
+slack = [
+    "slack-bolt>=1.18.0",
+]
+
 local = [
     "sentence-transformers>=2.2.0",
     "torch>=2.0.0",
@@ -79,7 +87,7 @@ browser = [
 ]
 
 all = [
-    "wingman[dev,discord,local,extraction,browser]",
+    "wingman[dev,discord,whatsapp,slack,local,extraction,browser]",
 ]
 
 [project.scripts]
