feat(voice): Add voice capabilities - wake word, STT, TTS
Phase 3 Complete: Voice Subsystem

Wake Word Detection:
- Picovoice Porcupine integration for local wake word detection
- Async detection loop with custom keyword support
- No cloud required - fully local processing

Speech-to-Text (STT):
- Multi-provider support: OpenAI Whisper, Google STT, local Whisper
- Batch and streaming transcription
- File and bytes input support

Text-to-Speech (TTS):
- Multi-provider support: OpenAI TTS, Google TTS, ElevenLabs, local TTS
- Voice selection (Alloy, Echo, Fable, Onyx, Nova, Shimmer)
- MP3 output with file or bytes return

Architecture:
- src/voice/wake_word.py - Wake word detection with Porcupine
- src/voice/stt.py - Speech recognition with multiple backends
- src/voice/tts.py - Speech synthesis with multiple backends
- Clean async/await patterns throughout

Configuration:
- Added voice dependency group to pyproject.toml
- PICOVOICE_ACCESS_KEY for wake word detection
- ELEVENLABS_API_KEY for premium TTS
- Reuses existing OpenAI/Google keys for STT/TTS

Dependencies:
- pvporcupine>=3.0.0 (wake word)
- pyaudio>=0.2.13 (audio I/O)
- openai-whisper>=20231117 (local STT)
- pyttsx3>=2.90 (local TTS)

Install with: pip install -e .[voice]

--- a/.env.example
+++ b/.env.example
@@ -108,6 +108,24 @@ SLACK_BOT_TOKEN=xoxb-your-slack-bot-token-here
 SLACK_APP_TOKEN=xapp-your-slack-app-token-here  # For Socket Mode
 
 # =============================================================================
+# VOICE CAPABILITIES (Optional - For Voice Interactions)
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# WAKE WORD DETECTION (Picovoice Porcupine)
+# -----------------------------------------------------------------------------
+# Get your access key from: https://console.picovoice.ai
+# Enables "Hey Wingman" wake word detection
+PICOVOICE_ACCESS_KEY=your_picovoice_access_key_here
+
+# -----------------------------------------------------------------------------
+# ELEVENLABS (High-quality TTS)
+# -----------------------------------------------------------------------------
+# Get your API key from: https://elevenlabs.io
+# Optional: For premium quality text-to-speech
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# =============================================================================
 # APPLICATION CONFIGURATION
 # =============================================================================
 
