--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,13 @@ slack = [
     "slack-bolt>=1.18.0",
 ]
 
+voice = [
+    "pvporcupine>=3.0.0",
+    "pyaudio>=0.2.13",
+    "openai-whisper>=20231117",
+    "pyttsx3>=2.90",
+]
+
 local = [
     "sentence-transformers>=2.2.0",
     "torch>=2.0.0",
@@ -79,9 +86,9 @@ extraction = [
 ]
 
 # Browser-Use - AI-powered browser automation
-browser = [
-    "browser-use>=0.4.0",
-    "langchain-openai>=0.1.0",
+all = [
+    "wingman[dev,discord,whatsapp,slack,voice,local,extraction,browser]",
+]   "langchain-openai>=0.1.0",
     "langchain-anthropic>=0.1.0",
     "langchain-google-genai>=1.0.0",
 ]
