fix: Repair 8 corrupted source files and add voice config
Fixed files with syntax errors from overlapping edits:
- src/core/heartbeat.py: Fixed 'dataclimport' typo (missing space)
- src/skills/__init__.py: Removed unicode tree chars causing syntax error
- src/providers/manager.py: Removed duplicate method definitions
- src/tools/filesystem.py: Removed merged/overlapping code blocks
- src/tools/shell.py: Removed duplicate _validate_command and unterminated strings
- src/plugins/loader.py: Removed duplicate methods and fixed missing except block
- src/core/__init__.py: Removed duplicate __all__ definitions
- src/channels/discord.py: Removed duplicate/overlapping event handlers

Also added:
- VoiceConfig model to settings.py ChannelsConfig
- All 40 modules now import successfully
- All 17 existing tests pass

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,15 +87,15 @@ extraction = [
 ]
 
 # Browser-Use - AI-powered browser automation
-all = [
-    "wingman[dev,discord,whatsapp,slack,voice,local,extraction,browser]",
-]   "langchain-openai>=0.1.0",
+browser = [
+    "browser-use>=0.1.0",
+    "langchain-openai>=0.1.0",
     "langchain-anthropic>=0.1.0",
     "langchain-google-genai>=1.0.0",
 ]
 
 all = [
-    "wingman[dev,discord,whatsapp,slack,local,extraction,browser]",
+    "wingman[dev,discord,whatsapp,slack,voice,local,extraction,browser]",
 ]
 
 [project.scripts]
